Fixed: wflow-consoleweb - Fixed admin bar buttons not showing correctly under Bootstrap @trunk
git-svn-id: http://dev.joget.org/svn/jw-community/trunk@1317 1bff935d-2fe2-40b7-b00f-c2aca69a7612

--- a/wflow-consoleweb/src/main/webapp/css/admin_bar.css
+++ b/wflow-consoleweb/src/main/webapp/css/admin_bar.css
@@ -46,13 +46,13 @@ body.embeded #adminBar {
 #adminBar #quickEditModeOption label.ui-state-active {
     border: solid 1px lightblue;
 }
-#adminBar #quickEditModeOption label.ui-corner-left {
+#adminBar #quickEditModeOnLabel {
     border-radius: 4px 4px 0px 0px;
     -webkit-border-radius: 4px 4px 0px 0px;
     -moz-border-radius: 4px 4px 0px 0px;
     background: #ffffff;
 }
-#adminBar #quickEditModeOption label.ui-corner-right {
+#adminBar #quickEditModeOffLabel {
     border-radius: 0px 0px 4px 4px;
     -webkit-border-radius: 0px 0px 4px 4px;
     -moz-border-radius: 0px 0px 4px 4px;
